# pyFFTW

./: CMakeLists.txt
cmake/: FindFFTW3.cmake  FindNumPy.cmake
pyfftw/: CMakeLists.txt
